--- a/AndroidClient/Hypechat/app/src/main/res/layout/activity_registro.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/activity_registro.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".RegistroActivity">
 
-    <!-- Login progress -->
+    <!-- Register progress -->
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_login"
+        android:id="@+id/toolbar_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -26,7 +26,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin">
 
         <ProgressBar
-            android:id="@+id/login_progress"
+            android:id="@+id/register_progress"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,12 +34,12 @@
             android:visibility="gone" />
 
         <ScrollView
-            android:id="@+id/login_form"
+            android:id="@+id/register_form"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:id="@+id/email_login_form"
+                android:id="@+id/email_register_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -48,13 +48,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <AutoCompleteTextView
+                        android:id="@+id/name_reg"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/prompt_name"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
-                    <LinearLayout
-                        android:focusable="true" android:focusableInTouchMode="true"
-                        android:layout_width="0px" android:layout_height="0px"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/email"
+                        android:id="@+id/email_reg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_email"
@@ -69,7 +79,7 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/password"
+                        android:id="@+id/password_reg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_password"
@@ -82,61 +92,32 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <Button
-                    android:id="@+id/email_sign_in_button"
-                    style="?android:textAppearanceSmall"
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/action_sign_in"
-                    android:textStyle="bold" />
+                    android:layout_height="wrap_content">
 
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="15dp"
-                    android:columnCount="3"
-                    android:stretchColumns="*">
-
-                    <TableRow
+                    <EditText
+                        android:id="@+id/password_conf_reg"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:hint="@string/prompt_password_confirm"
+                        android:imeActionId="6"
+                        android:imeActionLabel="@string/action_sign_in_short"
+                        android:imeOptions="actionUnspecified"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
-                        <View style="@style/Divider"
-                            android:layout_gravity="center"
-                            android:layout_width="0dp">
-                        </View>
-
-                        <TextView
-                            android:text="@string/or"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/textViewO"
-                            android:textAlignment="center"
-                            android:textSize="20sp"
-                            android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:textStyle="bold"
-                            android:layout_weight="1"
-                            android:padding="10dp" />
-
-                        <View style="@style/Divider"
-                            android:layout_gravity="center">
-
-                        </View>
-                    </TableRow>
-
-                </TableLayout>
+                </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/email_register_button"
+                    android:id="@+id/email_reg_button"
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/action_register"
-                    android:textStyle="bold"
-                    android:onClick="openRegisterActivity"/>
+                    android:textStyle="bold"/>
 
             </LinearLayout>
         </ScrollView>
