--- a/AndroidClient/Hypechat/app/src/main/res/layout/activity_login.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".LoginActivity">
@@ -45,6 +46,7 @@
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/user_ti_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -54,7 +56,7 @@
                         android:layout_width="0px" android:layout_height="0px"/>
 
                     <AutoCompleteTextView
-                        android:id="@+id/email"
+                        android:id="@+id/user"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_email"
@@ -65,7 +67,9 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/pw_ti_layout"
                     android:layout_width="match_parent"
+                    app:passwordToggleEnabled="true"
                     android:layout_height="wrap_content">
 
                     <EditText
