--- a/AndroidClient/Hypechat/app/src/main/res/layout/activity_registro.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/activity_registro.xml
@@ -45,14 +45,15 @@
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/username_reg_ti"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/name_reg"
+                        android:id="@+id/username_reg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/prompt_name"
+                        android:hint="@string/prompt_username"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:singleLine="true" />
@@ -60,6 +61,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/email_reg_ti"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -75,7 +77,9 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/password_reg_ti"
                     android:layout_width="match_parent"
+                    app:passwordToggleEnabled="true"
                     android:layout_height="wrap_content">
 
                     <EditText
@@ -83,9 +87,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_password"
-                        android:imeActionId="6"
-                        android:imeActionLabel="@string/action_sign_in_short"
-                        android:imeOptions="actionUnspecified"
                         android:inputType="textPassword"
                         android:maxLines="1"
                         android:singleLine="true" />
@@ -94,6 +95,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
+                    android:id="@+id/password_confirm_reg_ti"
+                    app:passwordToggleEnabled="true"
                     android:layout_height="wrap_content">
 
                     <EditText
