--- a/AndroidClient/Hypechat/app/src/main/res/values/colors.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="background_45_color_1">#66ff66</color>
+    <color name="background_45_color_2">#006600</color>
 </resources>
