--- a/AndroidClient/Hypechat/app/src/main/res/layout/activity_login.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/activity_login.xml
@@ -112,6 +112,7 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/textViewO"
                             android:textAlignment="center"
+                            android:gravity="center"
                             android:textSize="20sp"
                             android:paddingBottom="10dp"
                             android:paddingTop="10dp"
