--- a/AndroidClient/Hypechat/app/src/main/res/layout/activity_registro.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/activity_registro.xml
@@ -5,36 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RegistroActivity">
+    tools:context=".RegistroActivity"
+    tools:ignore="RtlSymmetry">
 
-    <!-- Register progress -->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/AppToolbar" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
-
-        <ProgressBar
-            android:id="@+id/register_progress"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:visibility="gone" />
+    <ImageView
+        android:id="@+id/go_back"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="start"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/back"
+        android:src="@drawable/back"
+        android:layout_marginLeft="24dp" />
 
         <ScrollView
-            android:id="@+id/register_form"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -42,18 +28,34 @@
                 android:id="@+id/email_register_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:focusableInTouchMode="true"
+                android:orientation="vertical"
+                android:paddingLeft="24dp"
+                android:paddingTop="4dp"
+                android:paddingRight="24dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="24dp"
+                    android:contentDescription="@string/hypechat_desc"
+                    android:src="@drawable/logo_transparent2" />
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/username_reg_ti"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:textColorHint="@color/colorAccent">
 
                     <AutoCompleteTextView
                         android:id="@+id/username_reg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_username"
+                        android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:singleLine="true" />
@@ -63,13 +65,17 @@
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/email_reg_ti"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="8dp"
+                    android:textColorHint="@color/colorAccent">
 
                     <AutoCompleteTextView
                         android:id="@+id/email_reg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_email"
+                        android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:singleLine="true" />
@@ -79,51 +85,81 @@
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/password_reg_ti"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="8dp"
+                    android:textColorHint="@color/colorAccent"
                     app:passwordToggleEnabled="true"
-                    android:layout_height="wrap_content">
+                    app:passwordToggleTint="@color/colorAccent">
 
                     <EditText
                         android:id="@+id/password_reg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_password"
+                        android:imeOptions="actionNext"
                         android:inputType="textPassword"
                         android:maxLines="1"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        tools:ignore="Autofill" />
 
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
                     android:id="@+id/password_confirm_reg_ti"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="8dp"
+                    android:textColorHint="@color/colorAccent"
                     app:passwordToggleEnabled="true"
-                    android:layout_height="wrap_content">
+                    app:passwordToggleTint="@color/colorAccent">
 
                     <EditText
                         android:id="@+id/password_conf_reg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+
                         android:hint="@string/prompt_password_confirm"
                         android:imeActionId="6"
                         android:imeActionLabel="@string/action_sign_in_short"
-                        android:imeOptions="actionUnspecified"
+                        android:imeOptions="actionDone"
                         android:inputType="textPassword"
                         android:maxLines="1"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        tools:ignore="Autofill" />
 
                 </android.support.design.widget.TextInputLayout>
 
-                <Button
-                    android:id="@+id/email_reg_button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
+                <ProgressBar
+                    android:id="@+id/register_progress"
+                    style="?android:attr/progressBarStyleLarge"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@string/action_register"
-                    android:textStyle="bold"/>
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
+
+                <LinearLayout
+                    android:id="@+id/register_form"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/email_reg_button"
+                        style="?android:textAppearanceSmall"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginBottom="24dp"
+                        android:background="@color/colorAccent"
+                        android:text="@string/action_register"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
-    </LinearLayout>
 
 </LinearLayout>
