--- a/AndroidClient/Hypechat/app/src/main/res/values/colors.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#627285</color>
+    <color name="colorPrimaryDark">#171b1f</color>
+    <color name="colorAccent">#303841</color>
     <color name="background_45_color_1">#66ff66</color>
     <color name="background_45_color_2">#006600</color>
+    <color name="activity_background">#a8c0dd</color>
+    <color name="colorAccentLight">#47525f</color>
+    <color name="error">#e60000</color>
+    <color name="white">#ffffff</color>
 </resources>
