--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
     <title>Hypechat Admin</title>
   </head>
   <body>
-    <div id="content" />
-    <script src="../static/bundle.js" type="text/javascript"></script>
+    <div id="form"/>
+    <script src="../static/login.js" type="text/javascript"></script>
   </body>
 </html>
