Favicon y algo de estilo

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hypechat Admin</title>
+    <title>Hypechat Back Office</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <style>
+      body {
+        background-color: #A8C0DD;
+      }
+
+      input[type=submit] {
+        background-color: #303841;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <div id="form"/>
