--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hypechat Back Office</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <style>
-      body {
-        background-color: #A8C0DD;
-      }
+{% extends 'layout.html' %}
 
-      input[type=submit] {
-        background-color: #303841;
-        color: white;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="form"/>
-    <script src="../static/login.js" type="text/javascript"></script>
-  </body>
-</html>
+{% block content %}
+  <script src="{{ url_for('static', filename='login.js') }}" type="text/javascript"></script>
+{% endblock %}
