--- a/app/static/style.css
+++ b/app/static/style.css
@@ -7,25 +7,63 @@ body {
   background-color: var(--background-color);
 }
 
-input[type=text], input[type=password] {
+.login-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.login-form h1 {
+  font-family: "Teko", sans-serif;
+  font-size: 50px;
+  color: var(--accent-color);
+}
+
+.login-form input {
+  font-family: "Teko";
+  font-weight: bold;
+  margin-bottom: 25px;
+  width: 100%;
+  outline: none;
+  border: none;
+}
+
+.login-form input[type=text],
+.login-form input[type=password] {
   background-color: var(--background-color);
   color: var(--accent-color);
-  border: none;
   border-bottom: 1px solid var(--accent-color);
 }
 
-input[type=text]:focus, input[type=password]:focus {
-  background-color: var(--background-color);
-  border: none;
-  border-bottom: 2px solid var(--accent-color);
-}
-
-input[type=submit] {
+.login-form input[type=submit] {
   background-color: var(--accent-color);
   color: white;
-  border: none;
+  cursor: pointer;
 }
 
-::placeholder {
+.login-form form div {
+  position: relative;
+}
+
+.login-form form div label {
+  position: absolute;
+  left: 0;
+  font-family: "Teko";
   color: var(--accent-color);
+  pointer-events: none;
+}
+
+.login-form input:focus ~ label,
+.login-form input:valid ~ label {
+  top: -12px;
+  left: 0;
+  color: var(--accent-color);
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.login-form input[type=text]:focus,
+.login-form input[type=password]:focus {
+  border-bottom: 2px solid var(--accent-color);
 }
