--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Hypechat Back Office</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Teko:300">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
