--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     {% for message in get_flashed_messages() %}
-      <div>
+      <div class="alert">
         {{ message }}
       </div>
     {% endfor %}
