--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-  <script src="{{ url_for('static', filename='login.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/login.js') }}" type="text/javascript"></script>
 {% endblock %}
