--- a/app/static/style.css
+++ b/app/static/style.css
@@ -83,3 +83,18 @@ body {
   left: 50%;
   transform: translateX(-50%);
 }
+
+.menu-button {
+  font-family: "Teko";
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--accent-color);
+  width: 20%;
+}
+
+.menu h1 {
+  text-align: center;
+  font-family: "Teko";
+  font-size: 50px;
+  color: var(--accent-color);
+}
