--- a/app/static/style.css
+++ b/app/static/style.css
@@ -85,11 +85,16 @@ body {
 }
 
 .menu-button {
+  float: left;
+  width: 20%;
+}
+
+.menu-button button {
   font-family: "Teko";
   font-size: 20px;
   font-weight: bold;
   color: var(--accent-color);
-  width: 20%;
+  width: 100%;
 }
 
 .menu h1 {
