--- a/AndroidClient/Hypechat/app/src/main/res/drawable/side_nav_bar.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#009688"
-        android:endColor="#00695C"
-        android:startColor="#4DB6AC"
+        android:centerColor="#627285"
+        android:endColor="#171b1f"
+        android:startColor="#a8c0dd"
         android:type="linear" />
 </shape>
