--- a/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/action_organization"
+        android:orderInCategory="100"
+        android:title="@string/organizations"
+        android:icon="@drawable/organizaciones2"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/action_profile"
-        android:orderInCategory="100"
+        android:orderInCategory="200"
         android:title="@string/action_profile"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_logout"
-        android:orderInCategory="200"
+        android:orderInCategory="300"
         android:title="@string/action_logout"
         app:showAsAction="never" />
 </menu>
