Password recovery fix, organization channel def fix, organization list

--- a/AndroidClient/Hypechat/app/src/main/res/layout/activity_password_restore.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/activity_password_restore.xml
@@ -184,7 +184,7 @@
                 android:layout_height="36dp"
                 android:layout_marginBottom="24dp"
                 android:background="@color/colorAccent"
-                android:onClick="showTokenLayout"
+                android:onClick="showGotTokenLayout"
                 android:text="@string/token_restore"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
