--- a/AndroidClient/Hypechat/app/src/main/res/layout/nav_header_main.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/nav_header_main.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
+    android:orientation="horizontal"
     android:gravity="bottom"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="?attr/actionBarSize"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Spinner
+        android:id="@+id/spinner_header"
+        android:entries="@array/org_initial_array"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/inicio"
-        android:id="@+id/header_nav_text"
-        android:textSize="19sp"
-        android:layout_alignParentStart="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_alignParentLeft="true" />
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
 
 
-</RelativeLayout>
+</LinearLayout>
