--- a/AndroidClient/Hypechat/app/src/main/res/layout/fragment_join_organization.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/fragment_join_organization.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -50,5 +51,17 @@
             android:text="@string/no_invitations" />
 
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_join_organization"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="gone"
+        android:layout_gravity="bottom|end"
+        app:fabSize="mini"
+        android:src="@drawable/organizaciones2"
+        android:layout_margin="@dimen/fab_margin" />
 
 </FrameLayout>
