--- a/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
@@ -11,13 +11,26 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_profile"
+        android:id="@+id/action_about_channel"
         android:orderInCategory="200"
+        android:title="@string/action_about_channel"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_profile"
+        android:orderInCategory="300"
         android:title="@string/action_profile"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_search_profile"
+        android:orderInCategory="400"
+        android:title="@string/action_search_profile"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_logout"
-        android:orderInCategory="300"
+        android:orderInCategory="500"
         android:title="@string/action_logout"
         app:showAsAction="never" />
 </menu>
